--- a/TOOLS/JS/connector.html
+++ b/TOOLS/JS/connector.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Connectoe</title>
     
-    <script type="text/javascript" src="02_While_loop.js"></script>
+    <script type="text/javascript" src="test.js"></script>
 
 </head>
 <body>
