--- a/TOOLS/CSS_/html_.html
+++ b/TOOLS/CSS_/html_.html
@@ -16,6 +16,7 @@
 
 <body>
     <h1>CSS TOOLS</h1>
+    <a target="_blank" href="https://www.youtube.com/watch?v=HGTJBPNC-Gw&t=13649s&ab_channel=BroCode">BroCode: HTML & CSS Full Course</a>
     
 <!-- 
 01. ВИДОВЕ СSS property
@@ -36,7 +37,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     
-
+    <p id="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas necessitatibus esse porro repellat dignissimos tempore commodi laudantium tempora nam. Iure maxime officiis ut nisi porro! Consequuntur voluptatum nobis reprehenderit! Quis?</p>
 
 <!-- 
 04. BORDERS -->
@@ -64,8 +65,8 @@
 
 
 <!-- 
-07. FLOAT - снимка обиколена от текст -->
-    <h3>07. FLOAT </h3>
+07. FLOAT IMAGE IN TEXT - снимка обиколена от текст -->
+    <h3>07. FLOAT IMAGE IN TEXT</h3>
     <div id="floatDiv">
         <img src="elements/pokeball.png" id="floatImg" alt="pokevall image" height="80">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus rem sapiente labore recusandae nobis tempora. Eius assumenda explicabo nihil dolores, totam iure tempore sapiente ab necessitatibus laboriosam doloribus maiores magni.</p>
@@ -89,8 +90,8 @@
     inline blok     -->
 
     <h3>09. DISPLAY</h3>
-    <div id="divDisplay">div element</div>
-    <span id="spanDisplay">span element</span>
+    <div id="divDisplay">divDisplay</div>
+    <span id="spanDisplay">spanDisplay</span>
     <br> <br><hr><br>
 
 <!-- 
@@ -197,6 +198,7 @@
 <!-- 
 15. PAGINATION -  -->
     <h3>15. PAGINATION</h3>
+        <p> 02:42:46 </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero excepturi repudiandae, blanditiis sint, possimus nihil dolores iure dolorum quos itaque perferendis maxime soluta fuga corporis, laborum ab deserunt praesentium modi!</p>
 
         <div class="pagination">
@@ -327,9 +329,27 @@ https://fontawesome.com/     -->
     <a href="https://www.youtube.com/watch?v=HGTJBPNC-Gw&t=5032s&ab_channel=BroCode" target="_blank">
         <strong>link for 3:47:30</strong>        
     </a>
+    <br><br><hr><br>
 
 
+
+<!-- 
+23 test  -->
+    <h3>23. test</h3>
+
+    <div id="p">
+        HTML
+    </div>
+    <div id="bar">2</div>
+
+    <div id="divDisplay">div element</div>
+    <span id="spanDisplay">span element</span>
 
 
 </body>
 </html>
+
+
+
+
+
