--- a/TOOLS/HTML_/HTM_Basics.html
+++ b/TOOLS/HTML_/HTM_Basics.html
@@ -12,6 +12,57 @@
 
 
 <body>
+<!-- АТРИБУТИ
+
+id
+    Уникален идентификатор за елемента в документа, 
+    както беше обяснено по-горе.
+
+
+class
+    Класът позволява да се приложат един или повече класове 
+    към елемента. Класовете се използват за стилизиране и създаване на 
+    групиране на елементите за обработка с JavaScript.
+
+
+href
+    Задава URL адреса на хипервръзката. Използва се основно с 
+    елементи като <a> (хипервръзка) и <link> (връзка към външни ресурси).
+
+
+src
+    Указва пътя към изображение, скрипт, аудио файл или друг 
+    ресурс, който се вмъква в документа. Обикновено се използва с елементи 
+    като <img>, <script>, <audio>, <video> и т.н.
+
+
+type
+    Определя типа на елемента или въведеното поле. Например, 
+    при <input> се използва за указване на типа на въведеното поле (текст, 
+    парола, бутон и др.).
+
+
+value
+    Представя стойността на елемента. Използва се често с 
+    формулярни елементи като <input>, <textarea> и др.
+
+
+title
+    Показва подсказка при преминаване на мишката върху 
+    елемента.
+
+
+alt
+    Показва алтернативен текст, който се показва в случай на 
+    липса на изображение или ако браузърът не може да го покаже.
+
+
+placeholder
+    Показва временен текст в поле за въвеждане, 
+    който изчезва, когато потребителят започне да въвежда.		 -->
+
+	
+
 <!-- 
 01. HEADER - контейнер-->
 	<header>
@@ -238,9 +289,10 @@
 
 
 		<!-- БУТОНИ -->
-		<input type="submit" value="SUBMIT"> :Submit</input> <br> <br>
+		<input type="submit" value="SUBMIT"> :Submit</input> 
+		<br> <br>
 		<input type="reset" value="RESET">
-
+		
 	</form> 
 	<br> <br> <br> <hr> <br> 
 
@@ -411,17 +463,3 @@
 </html>
 
 
-
-
-
-<!-- BLOCK ELEMENTS
-	заемат цялата ширина на екрана
-	започват на нов ред
-		<h1>-<h6>, <div>, <hr>, <li>, <ul>, <ol>, <p>, <table>
-
-	HTML 5 Semantic block elements:
-		<header>, <nav>, <footer>, <main>, <section>, <article>, <aside	
-
-	LINE IN ELEMENTS
-		заемат само толкова, колкото им трябва
-		приемат и други елементи на екрана -->
