--- a/TOOLS/JS_/_connector.html
+++ b/TOOLS/JS_/_connector.html
@@ -14,16 +14,11 @@
 </head>
 
 <body>
-
     <h1>This is the connector</h1>
 
-    <p>ctrl + shift + k</p>
-
-    <h6 id="special" >link to <a href="https://www.google.com/">google</a></h6>
-
-    <h6 id="one">HOVER ME</h6>
 
 
-    <script type="text/javascript" src="DOM.js"></script>
+    <!-- <script src="DOM_.js"></script> -->
+    <script src="METHOD_.js"></script>
 </body>
 </html>
