--- a/TOOLS/JS_/_connector.html
+++ b/TOOLS/JS_/_connector.html
@@ -19,6 +19,7 @@
 
 
     <!-- <script src="DOM_.js"></script> -->
-    <script src="METHOD_.js"></script>
+    <!-- <script src="METHOD_.js"></script> -->
+    <script src="OBJECT_.js"></script>
 </body>
 </html>
