--- a/TOOLS/JS_/Jonas/07-Pig-Game/starter/index.html
+++ b/TOOLS/JS_/Jonas/07-Pig-Game/starter/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <title>Pig Game</title>
   </head>
+
   <body>
     <main>
+      <!-- Player 1 -->
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1</h2>
         <p class="score" id="score--0">43</p>
@@ -17,6 +19,8 @@
           <p class="current-score" id="current--0">0</p>
         </div>
       </section>
+
+      <!-- Player 2 -->
       <section class="player player--1">
         <h2 class="name" id="name--1">Player 2</h2>
         <p class="score" id="score--1">24</p>
