--- a/TOOLS/JS_/_connector.html
+++ b/TOOLS/JS_/_connector.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Connector</title>   
+  <head>
+    <meta charset="UTF-8" />
+    <title>Connector</title>
     <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-            font-size: 1.2em;
-            background-color: azure;
-        }
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        font-size: 1.2em;
+        background-color: azure;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>This is the connector</h1>
-
-
 
     <!-- <script src="DOM_.js"></script> -->
     <!-- <script src="METHOD_.js"></script> -->
-    <script src="OBJECT_.js"></script>
-</body>
+    <!-- <script src="OBJECT_.js"></script> -->
+    <!-- <script src="aa_NOTES_.js"></script> -->
+    <script src="FUNCTION_.js"></script>
+  </body>
 </html>
