js wip: set map

--- a/TOOLS/JS_/_connector.html
+++ b/TOOLS/JS_/_connector.html
@@ -20,6 +20,7 @@
     <!-- <script src="METHOD_.js"></script> -->
     <!-- <script src="OBJECT_.js"></script> -->
     <!-- <script src="aa_NOTES_.js"></script> -->
-    <script src="FUNCTION_.js"></script>
+    <!-- <script src="FUNCTION_.js"></script> -->
+    <script src="MAP_.js"></script>
   </body>
 </html>
