wip js : functions

--- a/TOOLS/JS_/_connector.html
+++ b/TOOLS/JS_/_connector.html
@@ -2,7 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" />
     <title>Connector</title>
+    <link
+      rel="icon"
+      href="https://banner2.cleanpng.com/20180405/jfq/kisspng-computer-icons-electrical-connector-ac-power-plugs-connect-5ac5e649798347.8441961115229189854977.jpg"
+      type="image"
+    />
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
@@ -20,7 +26,7 @@
     <!-- <script src="METHOD_.js"></script> -->
     <!-- <script src="OBJECT_.js"></script> -->
     <!-- <script src="aa_NOTES_.js"></script> -->
-    <!-- <script src="FUNCTION_.js"></script> -->
-    <script src="MAP_.js"></script>
+    <script src="FUNCTION_.js"></script>
+    <!-- <script src="MAP_.js"></script> -->
   </body>
 </html>
