--- a/TOOLS/JS_/_connector.html
+++ b/TOOLS/JS_/_connector.html
@@ -5,6 +5,7 @@
     <meta name="viewport" />
     <title>Connector</title>
     <link
+      class="favicon"
       rel="icon"
       href="https://banner2.cleanpng.com/20180405/jfq/kisspng-computer-icons-electrical-connector-ac-power-plugs-connect-5ac5e649798347.8441961115229189854977.jpg"
       type="image"
@@ -19,14 +20,16 @@
     </style>
   </head>
 
-  <body>
-    <h1>This is the connector</h1>
+  <body data-version-number = "2.0.0">
+    <h1 class="header">This is the connector</h1>
 
-    <!-- <script src="DOM_.js"></script> -->
+
+    <!-- <script src="aa_NOTES_.js"></script> -->
+    <script src="DOM_.js"></script>
     <!-- <script src="METHOD_.js"></script> -->
     <!-- <script src="OBJECT_.js"></script> -->
-    <!-- <script src="aa_NOTES_.js"></script> -->
-    <script src="FUNCTION_.js"></script>
+    <!-- <script src="FUNCTION_.js"></script> -->
+    <!-- <script src="DATE_TIME_.js"></script> -->
     <!-- <script src="MAP_.js"></script> -->
   </body>
 </html>
