first steps in react learning

--- a/to_do_list/index.html
+++ b/to_do_list/index.html
@@ -15,19 +15,15 @@
       <!-- Writing area -->
       <div class="row">
         <input type="text" id="input-box" placeholder="Write a text">
-        <button>Add</button>
+        <button onclick="addTask()">Add</button>
       </div>
 
       <!-- Tasks container -->
       <ul id="list-container">
-        <li class="checked">Task 1</li>
-        <li>Task 2</li>
-        <li>Task 3</li>
+        <!-- <li class="checked">Task 1</li> -->
       </ul>
-
     </div>
   </div>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
